--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,15 +4,15 @@ env:
 before:
   hooks:
     - go mod tidy
-  builds:
-    - main: .
-      binary: git-bump
-      ldflags:
-        - -s -w
-        - -X main.Version={{.Version}}
-        - -X main.Revision={{.ShortCommit}}
-      env:
-        - CGO_ENABLED=0
+builds:
+  - main: .
+    binary: slack-quickpost
+    ldflags:
+      - -s -w
+      - -X main.Version={{.Version}}
+      - -X main.Revision={{.ShortCommit}}
+    env:
+      - CGO_ENABLED=0
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     replacements:
