--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - id: install ToshihitoKon/slack-quickpost
+    - id: install
       shell: bash
       run: |
         tmpDir=$(mktemp -d)
